--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          Vera Vitali, Erik Johansson, Fredrik Hallgren, Johan Ulveson, Niklas Engdahl, Jacob Lundqvist,
          Marianne Mörck, Christer Lindarw, Emma Peters, Frank Dorsin</p>
 
-         <p><strong><span style='color:brown;'> Premiärdatum:</span></strong><br> 
+         <p><strong><span style='color:brown;'> Premiär:</span></strong><br> 
          2 dec 2022</p>
 </section>
         
